# AnvilVM

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pty_bridge.cpp  qemu_bridge.cpp  vnc_bridge.cpp
app/src/main/java/com/anvilvm/app/: AnvilVMApp.kt  MainActivity.kt
app/src/main/java/com/anvilvm/app/data/imagestore/: ImageRepository.kt
app/src/main/java/com/anvilvm/app/di/: AppModule.kt
app/src/main/java/com/anvilvm/app/engine/: PtyBridge.kt  QemuEngine.kt  QemuRuntime.kt  RiscVSupport.kt  VMConfig.kt  VMService.kt  VncBridge.kt
app/src/main/java/com/anvilvm/app/engine/avf/: AvfDetector.kt  KvmAccelerator.kt
app/src/main/java/com/anvilvm/app/engine/profiler/: PerformanceProfiler.kt  TcgOptimizer.kt
app/src/main/java/com/anvilvm/app/engine/snapshot/: QmpClient.kt  SnapshotManager.kt
app/src/main/java/com/anvilvm/app/ui/display/: VncDisplayScreen.kt  VncDisplayViewModel.kt
app/src/main/java/com/anvilvm/app/ui/keyboard/: KeySym.kt  TouchKeyboard.kt
app/src/main/java/com/anvilvm/app/ui/terminal/: TerminalRenderer.kt  TerminalScreen.kt  TerminalViewModel.kt
app/src/main/java/com/anvilvm/app/ui/vmstore/: VMStoreScreen.kt
app/src/main/res/values/: styles.xml
docker/: Dockerfile.qemu-builder  docker-compose.yml
scripts/: build-docker.sh  build-qemu-android.sh  qemu-android-toolchain.cmake
scripts/integration/: full-integration-test.sh
scripts/test/: android-e2e-test.sh  download-alpine.sh  run-e2e-test.sh
(+12 files in other folders)
